--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "project-13",
+  "name": "embroidery_shop",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build --base=/project-13/",
+    "build": "vite build --base=/EmbroideryShop/",
     "preview": "vite preview"
   },
   "devDependencies": {
